--- a/Cipher Shield.csproj
+++ b/Cipher Shield.csproj
@@ -22,8 +22,9 @@
     <PlatformTarget>x64</PlatformTarget>
     <Platforms>AnyCPU;x64</Platforms>
     <Product>Cipher Shield</Product>
-    <Version>1.0.0</Version>
+    <Version>1.0.0.0</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyName>Cipher Shield</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>True</Optimize>
